Fixed text overflow

--- a/_frontend/frontsize/reactjsday-2017/widgets/conf-city-title.scss
+++ b/_frontend/frontsize/reactjsday-2017/widgets/conf-city-title.scss
@@ -1,4 +1,4 @@
 @include block ('conf-city-title') {
-  overflow: hidden;
+  // overflow: hidden;
   text-align: center;
 }
